--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
 }
+
+jar {
+    archiveFileName = 'sgov-validator-'+new Date().format('yyyyMMddHHmmss')+'.jar'
+}
