--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,30 @@
 plugins {
+    id 'java'
+    id 'ru.vyarus.quality' version '4.2.2'
     id "io.freefair.lombok" version "5.0.0-rc6"
     id 'java-library'
+    id 'maven-publish'
+}
+
+quality {
+    checkstyleVersion = '8.32'
+    checkstyle = true
+    spotbugs = false
+    pmd = false
+    configDir = 'config'
+}
+
+repositories {
+    jcenter()
+}
+
+compileJava {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
 }
 
 group 'com.github.sgov'
+version = '1.1'
 
 test {
     useJUnitPlatform()
@@ -19,4 +40,22 @@ dependencies {
 
 jar {
     archiveFileName = 'sgov-validator-' + new Date().format('yyyyMMddHHmmss') + '.jar'
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/opendata-mvcr/sgov-validator")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
 }
