--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ test {
 
 dependencies {
     implementation 'org.topbraid:shacl:1.3.1'
-    implementation 'org.slf4j:slf4j-simple:1.7.30'
+    implementation 'ch.qos.logback:logback-classic:0.9.26'
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.4.6'
