Fix Z-SGoV-UFO mapping

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ compileJava {
 }
 
 group 'com.github.sgov'
-version = '1.4.8'
+version = '1.5.0'
 
 test {
     useJUnitPlatform()
@@ -42,11 +42,14 @@ jar {
     archiveFileName = 'sgov-validator-' + new Date().format('yyyyMMddHHmmss') + '.jar'
 }
 
-task downloadFile(type: Download) {
-    src 'https://xn--slovnk-7va.gov.cz/sparql?default-graph-uri=https://slovn%C3%ADk.gov.cz/z%C3%A1kladn%C3%AD/mapov%C3%A1n%C3%AD&query=CONSTRUCT%20%7B?s%20?p%20?o%7D%20WHERE%20%7B?s%20?p%20?o%7D'
-    dest     new File('src/main/resources','z-sgov-mapping.ttl')
-    overwrite true
+ext.genOutputDir = file("$buildDir/generated-resources")
+
+task generateZSGoVUFOMapping(type: Download) {
+    src 'https://raw.githubusercontent.com/opendata-mvcr/ssp/master/content/z-sgov/z-sgov-mapov%C3%A1n%C3%AD-ufo.ttl'
+    dest new File("$genOutputDir", 'z-sgov-mapping.ttl')
 }
+
+sourceSets.main.output.dir ext.genOutputDir, builtBy: generateZSGoVUFOMapping
 
 publishing {
     repositories {
