--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
     id 'ru.vyarus.quality' version '4.2.2'
-    id "io.freefair.lombok" version "5.0.0-rc6"
+    id "io.freefair.lombok" version "5.3.0"
     id 'java-library'
     id 'maven-publish'
     id "de.undercouch.download" version "4.1.1"
@@ -25,7 +25,7 @@ compileJava {
 }
 
 group 'com.github.sgov'
-version = '1.5.7'
+version = '1.5.8'
 
 test {
     useJUnitPlatform()
@@ -34,8 +34,8 @@ test {
 dependencies {
     implementation 'org.topbraid:shacl:1.3.1'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:3.4.6'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
 }
 
 jar {
